After planning to only add small fixes to 0.98, some changes turned out to be larger than expected, and rather than half-solve
something I knew was already taken care of in the larger rewrite, I've pulled over a lot of the code from that rewrite, and will
probably discard the remains, making this the master branch again, at some point soon.

0.98a
    CHANGE - Various performance improvements (thanks to ikorzha758 for lots of feedback back in 2014)
    CHANGE - Replaced entire configuration parser (part of performance changes)
    CHANGE - dsstats data plugin can skip looking up additional Cacti data by setting dsstats_no_cacti_extras
    CHANGE - Moved all database access to use PDO, to avoid PHP 7.0 issues
    CHANGE - lots of internal changes mostly pulled over from refactoring project:
             * New WMTarget, ConfigReader, WMColour and Scale classes
             * New Manager class handles all database access for Cacti plugin
             * Rewritten drawing code for links
    FIXED - PHP 5.3 bug introduced in command-line tool in 0.98
    ADDED - SNMPv2c and SNMPv3 datasource plugins
    ADDED - Nodes can have named offsets defined with DEFINEOFFSET. Those names can be used in the NODES command for links
            and also for positioning other nodes. Defined offsets are inherited in templates. Think of switch ports on a switch image.

IMPORTANT NOTE for 0.98 and later - you may need to reset permissions on your users after upgrading, as I've
finally switched to the "new-style" plugin API that's been around for 5+ years. This handles
permissions differently, unfortunately.

0.98
    FIXED - MySQL error in table-creation. MySQL 5.6 is fussier.
    FIXED - Editor 'delete link' broken
    FIXED - KILO was ignored when processing %k in special tokens
    FIXED - Various fixes for PHP deprecated or strict-mode warnings
    FIXED - Line-ending trimming in 'external script' data source
    FIXED - rounding error 'kinks' in angled VIA links