@@ -10,19 +10,18 @@
     }
   ],
   "require": {
-    "pear/console_commandline": "^1.2",
-    "pear/console_getopt": "^1.4"
+    "ulrichsg/getopt-php": "^2.3"
   },
   "require-dev": {
-    "phpdocumentor/phpdocumentor": "2.*",
+    "phpdocumentor/phpdocumentor": "~2",
     "phpunit/dbunit": "^2.0",
-    "codeclimate/php-test-reporter": "0.3.*",
-    "phpunit/phpunit": "~5.6",
+    "codeclimate/php-test-reporter": "*",
+    "phpunit/phpunit": "~5",
     "phpmd/phpmd": "~2.1",
-    "sebastian/phpcpd": "~2.0",
-    "squizlabs/php_codesniffer": "~2.0",
+    "sebastian/phpcpd": "~2",
+    "squizlabs/php_codesniffer": "~2",
     "theseer/phpdox": "*",
-    "phploc/phploc": "~3.0",
-    "phpunit/php-code-coverage": "^4.0"
+    "phploc/phploc": "~3",
+    "phpunit/php-code-coverage": "~4"
   }
 }
