@@ -2,6 +2,9 @@ After planning to only add small fixes to 0.98, some changes turned out to be la
 something I knew was already taken care of in the larger rewrite, I've pulled over a lot of the code from that rewrite, and will
 probably discard the remains, making this the master branch again, at some point soon.
 
+POSSIBLE BREAKING CHANGE: Weathermap now makes use of PHP 5.3 features, so that is now the minimum version supported. No
+more PHP 4 support. Sorry to CentOS 4 users!
+
 0.98a
     CHANGE - Various performance improvements (thanks to ikorzha758 for lots of feedback back in 2014)
     CHANGE - Replaced entire configuration parser (part of performance changes)
